2007-03-12  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.18.1

2007-03-12  Elijah Newren  <newren gmail com>

	* NEWS:
	* README:
	* configure.in:
	2.18.0 release

2007-02-26  Thomas Thurman  <thomas@thurman.org.uk>

        * configure.in: post-release bump to 2.17.13.

2007-02-26  Thomas Thurman  <thomas@thurman.org.uk>

        * src/prefs.h: same as most recent entry on this branch.

2007-02-21  Thomas Thurman  <thomas@thurman.org.uk>

        * src/common.h, src/frames.c, src/prefs.c: back out
	last patch from Linus because it belongs in trunk and
	not the 2.18 branch. (My fault for applying it in the
	wrong place.)

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add MAINTAINERS to EXTRA_DIST so others
	can find out where to send patches. Hi Linus :-)

2007-02-17  Linus Torvalds  <torvalds@woody.linux-foundation.org>

        * src/common.h (MetaActionTitleBar): renamed from
	MetaActionDoubleClickTitleBar; added _LOWER and _MENU.
	* src/frames.c (meta_frame_titlebar_event): renamed
	enums as above; added code to handle _LOWER and _MENU,
	which is moved in from meta_frame_{middle|right}_click_event.
	* src/frames.c (meta_frame_middle_click_event,
        meta_frame_right_click_event): rewrote in terms of
        meta_frame_titlebar_event.
	* src/prefs.c: removed "DoubleClick" from names as above.
	* src/prefs.c (action_titlebar_from_string): added cases
	for "lower" and "menu".
	Fixes #408902.

2007-02-17  Linus Torvalds  <torvalds@woody.linux-foundation.org>

        * src/frames.c (meta_frames_button_press_event): Split out
	code for different kinds of click into separate functions.
	Fixes #408899.
	* src/frames.c (meta_frame_titlebar_event,
         meta_frame_double_click_event, meta_frame_middle_click_event,
         meta_frame_right_click_event): new functions.

2007-01-27  Bruno Boaventura <brunobol@gnome.org>

	* src/metacity-dialog.c (kill_window_question): Change dialog